fixing spacing for partials

--- a/src/sass/myservice-components.scss
+++ b/src/sass/myservice-components.scss
@@ -1140,3 +1140,13 @@ a {
     min-width: 15rem;
   }
 }
+
+.submitted-content {
+  .next-steps {
+    margin: 0 auto;
+
+    li {
+      text-align: left;
+    }
+  }
+}
